# dexhand_llm_control

./: README.md  package.xml  setup.cfg  setup.py
dexhand_llm_control/: llm_control.py  openai_session.py
launch/: simulation.launch.py
