<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dexhand_llm_control</name>
  <version>0.0.1</version>
  <description>A demonstration ROS2 package for controlling the DexHand with GPT4</description>
  <maintainer email="trent@iotdesignshop.com">Trent Shumay</maintainer>
  <license>CC BY-NC-SA 4.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>dexhand_gesture_controller</exec_depend>
  <exec_depend>dexhand_usb_serial</exec_depend>
  <exec_depend>dexhand_description</exec_depend>

  <exec_depend>portaudio19-dev</exec_depend>
  <exec_depend>mpg123</exec_depend>
  <exec_depend>python-speechrecognition-pip</exec_depend> 
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python-gTTS-pip</exec_depend> 
  <exec_depend>python3-openai-pip</exec_depend> 
  <exec_depend>python3-sounddevice-pip</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
